# Uni.Crypto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: cpm-catch.cmake  cpm-mbedtls-config-stm32.h  cpm-mbedtls-config.h  cpm-mbedtls.cmake
include/: uni_crypto.h  uni_crypto_aead.h  uni_crypto_crc16.h  uni_crypto_hmac.h  uni_crypto_random.h  uni_crypto_utils.h
src/: uni_crypto_aead.c  uni_crypto_crc16.c  uni_crypto_hmac.c  uni_crypto_random.c  uni_crypto_utils.c
src_tests/: CMakeLists.txt  uni_crypto_test_aead.cpp  uni_crypto_test_crc16.cpp  uni_crypto_test_hmac.cpp  uni_crypto_test_utils.cpp
